--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -45,12 +45,12 @@
   }
   
   .categories {
-    margin-top: 70px;
+    margin-top: 10px;
 
   }
   toolbar{
     position: static;
-    margin-top: 700px;
+    margin-top: 70px;
     left: 0;
     right: 0;
   }
